--- a/index.css
+++ b/index.css
@@ -131,8 +131,8 @@ img {
 .modal {
   display: none;
   position: fixed;
-  z-index: 1;
-  /*padding-top: 5px;
+  /*z-index: 1;
+  padding-top: 5px;
   padding-bottom: 5px;*/
   left: 0;
   top: 0;
@@ -144,9 +144,11 @@ img {
 
 
 .modal-content {
-  position: center;
+  position: relative;
   background-color: #fefefe;
-  margin: auto;
+  top: 50%;
+  transform: translateY(-50%);
+  /*margin: auto;
   display: flex;
   align-items: center;
   justify-content: center;
