--- a/index.css
+++ b/index.css
@@ -131,7 +131,8 @@ img {
 .modal {
   display: none;
   position: fixed;
-  /*z-index: 1;
+  z-index: 1;
+  /*
   padding-top: 5px;
   padding-bottom: 5px;*/
   left: 0;
@@ -159,6 +160,7 @@ img {
 
 
 .close {
+  z-index: 5;
   color: white;
   position: absolute;
   top: 10px;
